chore: add noreferrer to noopener rels

--- a/calculators/401k.html
+++ b/calculators/401k.html
@@ -423,12 +423,12 @@
                 </h3>
                 <p>Stay informed about contribution limits and retirement account rules:</p>
                 <div class="policy-grid">
-                    <a href="https://www.google.com/search?q=401k+contribution+limits" target="_blank" rel="noopener">Contribution Limits</a>
-                    <a href="https://www.google.com/search?q=401k+catch+up+contributions+age+50" target="_blank" rel="noopener">Catch-Up Contributions</a>
-                    <a href="https://www.google.com/search?q=401k+early+withdrawal+penalty+exceptions" target="_blank" rel="noopener">Early Withdrawal Rules</a>
-                    <a href="https://www.google.com/search?q=401k+rollover+to+IRA+rules" target="_blank" rel="noopener">401(k) Rollover Rules</a>
-                    <a href="https://www.google.com/search?q=required+minimum+distribution+RMD+rules" target="_blank" rel="noopener">RMD Requirements</a>
-                    <a href="https://www.google.com/search?q=Roth+401k+vs+traditional+401k" target="_blank" rel="noopener">Roth vs Traditional 401(k)</a>
+                    <a href="https://www.google.com/search?q=401k+contribution+limits" target="_blank" rel="noopener noreferrer">Contribution Limits</a>
+                    <a href="https://www.google.com/search?q=401k+catch+up+contributions+age+50" target="_blank" rel="noopener noreferrer">Catch-Up Contributions</a>
+                    <a href="https://www.google.com/search?q=401k+early+withdrawal+penalty+exceptions" target="_blank" rel="noopener noreferrer">Early Withdrawal Rules</a>
+                    <a href="https://www.google.com/search?q=401k+rollover+to+IRA+rules" target="_blank" rel="noopener noreferrer">401(k) Rollover Rules</a>
+                    <a href="https://www.google.com/search?q=required+minimum+distribution+RMD+rules" target="_blank" rel="noopener noreferrer">RMD Requirements</a>
+                    <a href="https://www.google.com/search?q=Roth+401k+vs+traditional+401k" target="_blank" rel="noopener noreferrer">Roth vs Traditional 401(k)</a>
                 </div>
             </section>
         </div>
