--- a/calculators/auto-loan.html
+++ b/calculators/auto-loan.html
@@ -477,12 +477,12 @@
                 </h3>
                 <p>Learn about auto financing options and consumer protections:</p>
                 <div class="policy-grid">
-                    <a href="https://www.google.com/search?q=best+auto+loan+rates" target="_blank" rel="noopener">Best Auto Loan Rates</a>
-                    <a href="https://www.google.com/search?q=credit+union+auto+loans+benefits" target="_blank" rel="noopener">Credit Union Loans</a>
-                    <a href="https://www.google.com/search?q=car+sales+tax+by+state" target="_blank" rel="noopener">Sales Tax by State</a>
-                    <a href="https://www.google.com/search?q=EV+tax+credit+electric+vehicle" target="_blank" rel="noopener">EV Tax Credits</a>
-                    <a href="https://www.google.com/search?q=gap+insurance+worth+it" target="_blank" rel="noopener">GAP Insurance Guide</a>
-                    <a href="https://www.google.com/search?q=refinance+auto+loan+when" target="_blank" rel="noopener">When to Refinance</a>
+                    <a href="https://www.google.com/search?q=best+auto+loan+rates" target="_blank" rel="noopener noreferrer">Best Auto Loan Rates</a>
+                    <a href="https://www.google.com/search?q=credit+union+auto+loans+benefits" target="_blank" rel="noopener noreferrer">Credit Union Loans</a>
+                    <a href="https://www.google.com/search?q=car+sales+tax+by+state" target="_blank" rel="noopener noreferrer">Sales Tax by State</a>
+                    <a href="https://www.google.com/search?q=EV+tax+credit+electric+vehicle" target="_blank" rel="noopener noreferrer">EV Tax Credits</a>
+                    <a href="https://www.google.com/search?q=gap+insurance+worth+it" target="_blank" rel="noopener noreferrer">GAP Insurance Guide</a>
+                    <a href="https://www.google.com/search?q=refinance+auto+loan+when" target="_blank" rel="noopener noreferrer">When to Refinance</a>
                 </div>
             </section>
         </div>
