--- a/calculators/compound-interest.html
+++ b/calculators/compound-interest.html
@@ -388,10 +388,10 @@
                 </h3>
                 <p>Learn more about investing and growing your wealth:</p>
                 <div class="policy-grid">
-                    <a href="https://www.google.com/search?q=best+index+funds+for+beginners" target="_blank" rel="noopener">Best Index Funds</a>
-                    <a href="https://www.google.com/search?q=IRA+contribution+limits" target="_blank" rel="noopener">IRA Contribution Limits</a>
-                    <a href="https://www.google.com/search?q=capital+gains+tax+rates" target="_blank" rel="noopener">Capital Gains Tax Rates</a>
-                    <a href="https://www.google.com/search?q=S%26P+500+historical+returns" target="_blank" rel="noopener">S&P 500 Historical Returns</a>
+                    <a href="https://www.google.com/search?q=best+index+funds+for+beginners" target="_blank" rel="noopener noreferrer">Best Index Funds</a>
+                    <a href="https://www.google.com/search?q=IRA+contribution+limits" target="_blank" rel="noopener noreferrer">IRA Contribution Limits</a>
+                    <a href="https://www.google.com/search?q=capital+gains+tax+rates" target="_blank" rel="noopener noreferrer">Capital Gains Tax Rates</a>
+                    <a href="https://www.google.com/search?q=S%26P+500+historical+returns" target="_blank" rel="noopener noreferrer">S&P 500 Historical Returns</a>
                 </div>
             </section>
         </div>
