--- a/calculators/debt-payoff.html
+++ b/calculators/debt-payoff.html
@@ -538,12 +538,12 @@
                 </h3>
                 <p>Learn more about debt management strategies:</p>
                 <div class="policy-grid">
-                    <a href="https://www.google.com/search?q=debt+snowball+method+explained" target="_blank" rel="noopener">Snowball Method</a>
-                    <a href="https://www.google.com/search?q=debt+avalanche+method+explained" target="_blank" rel="noopener">Avalanche Method</a>
-                    <a href="https://www.google.com/search?q=best+balance+transfer+cards" target="_blank" rel="noopener">Balance Transfer Cards</a>
-                    <a href="https://www.google.com/search?q=debt+consolidation+loan+pros+cons" target="_blank" rel="noopener">Debt Consolidation</a>
-                    <a href="https://www.google.com/search?q=credit+counseling+services" target="_blank" rel="noopener">Credit Counseling</a>
-                    <a href="https://www.google.com/search?q=debt+management+plan" target="_blank" rel="noopener">Debt Management Plans</a>
+                    <a href="https://www.google.com/search?q=debt+snowball+method+explained" target="_blank" rel="noopener noreferrer">Snowball Method</a>
+                    <a href="https://www.google.com/search?q=debt+avalanche+method+explained" target="_blank" rel="noopener noreferrer">Avalanche Method</a>
+                    <a href="https://www.google.com/search?q=best+balance+transfer+cards" target="_blank" rel="noopener noreferrer">Balance Transfer Cards</a>
+                    <a href="https://www.google.com/search?q=debt+consolidation+loan+pros+cons" target="_blank" rel="noopener noreferrer">Debt Consolidation</a>
+                    <a href="https://www.google.com/search?q=credit+counseling+services" target="_blank" rel="noopener noreferrer">Credit Counseling</a>
+                    <a href="https://www.google.com/search?q=debt+management+plan" target="_blank" rel="noopener noreferrer">Debt Management Plans</a>
                 </div>
             </section>
         </div>
