--- a/calculators/emergency-fund.html
+++ b/calculators/emergency-fund.html
@@ -487,10 +487,10 @@
                 </h3>
                 <p>Find the best places to keep your emergency fund:</p>
                 <div class="policy-grid">
-                    <a href="https://www.google.com/search?q=best+high+yield+savings+accounts" target="_blank" rel="noopener">Best Savings Accounts</a>
-                    <a href="https://www.google.com/search?q=money+market+accounts+rates" target="_blank" rel="noopener">Money Market Rates</a>
-                    <a href="https://www.google.com/search?q=FDIC+insurance+limits" target="_blank" rel="noopener">FDIC Insurance</a>
-                    <a href="https://www.google.com/search?q=automate+savings+tips" target="_blank" rel="noopener">Automate Savings</a>
+                    <a href="https://www.google.com/search?q=best+high+yield+savings+accounts" target="_blank" rel="noopener noreferrer">Best Savings Accounts</a>
+                    <a href="https://www.google.com/search?q=money+market+accounts+rates" target="_blank" rel="noopener noreferrer">Money Market Rates</a>
+                    <a href="https://www.google.com/search?q=FDIC+insurance+limits" target="_blank" rel="noopener noreferrer">FDIC Insurance</a>
+                    <a href="https://www.google.com/search?q=automate+savings+tips" target="_blank" rel="noopener noreferrer">Automate Savings</a>
                 </div>
             </section>
         </div>
