--- a/calculators/home-affordability.html
+++ b/calculators/home-affordability.html
@@ -467,10 +467,10 @@
                 </h3>
                 <p>Explore programs and resources for home buyers:</p>
                 <div class="policy-grid">
-                    <a href="https://www.google.com/search?q=FHA+loan+requirements" target="_blank" rel="noopener">FHA Loans</a>
-                    <a href="https://www.google.com/search?q=DTI+ratio+requirements+mortgage" target="_blank" rel="noopener">DTI Requirements</a>
-                    <a href="https://www.google.com/search?q=PMI+private+mortgage+insurance+cost" target="_blank" rel="noopener">PMI Costs</a>
-                    <a href="https://www.google.com/search?q=credit+score+needed+for+mortgage" target="_blank" rel="noopener">Credit Score</a>
+                    <a href="https://www.google.com/search?q=FHA+loan+requirements" target="_blank" rel="noopener noreferrer">FHA Loans</a>
+                    <a href="https://www.google.com/search?q=DTI+ratio+requirements+mortgage" target="_blank" rel="noopener noreferrer">DTI Requirements</a>
+                    <a href="https://www.google.com/search?q=PMI+private+mortgage+insurance+cost" target="_blank" rel="noopener noreferrer">PMI Costs</a>
+                    <a href="https://www.google.com/search?q=credit+score+needed+for+mortgage" target="_blank" rel="noopener noreferrer">Credit Score</a>
                 </div>
             </section>
         </div>
