--- a/calculators/inflation.html
+++ b/calculators/inflation.html
@@ -416,12 +416,12 @@
                 </h3>
                 <p>Stay informed about inflation and economic trends:</p>
                 <div class="policy-grid">
-                    <a href="https://www.google.com/search?q=current+US+inflation+rate+CPI" target="_blank" rel="noopener">Current US Inflation Rate</a>
-                    <a href="https://www.google.com/search?q=Federal+Reserve+interest+rate+decision" target="_blank" rel="noopener">Fed Interest Rate</a>
-                    <a href="https://www.google.com/search?q=I+bonds+inflation+protected+savings" target="_blank" rel="noopener">I Bonds (Inflation Protected)</a>
-                    <a href="https://www.google.com/search?q=TIPS+treasury+inflation+protected+securities" target="_blank" rel="noopener">TIPS Securities</a>
-                    <a href="https://www.google.com/search?q=social+security+COLA+adjustment" target="_blank" rel="noopener">Social Security COLA</a>
-                    <a href="https://www.google.com/search?q=historical+inflation+rates+by+year" target="_blank" rel="noopener">Historical Inflation Rates</a>
+                    <a href="https://www.google.com/search?q=current+US+inflation+rate+CPI" target="_blank" rel="noopener noreferrer">Current US Inflation Rate</a>
+                    <a href="https://www.google.com/search?q=Federal+Reserve+interest+rate+decision" target="_blank" rel="noopener noreferrer">Fed Interest Rate</a>
+                    <a href="https://www.google.com/search?q=I+bonds+inflation+protected+savings" target="_blank" rel="noopener noreferrer">I Bonds (Inflation Protected)</a>
+                    <a href="https://www.google.com/search?q=TIPS+treasury+inflation+protected+securities" target="_blank" rel="noopener noreferrer">TIPS Securities</a>
+                    <a href="https://www.google.com/search?q=social+security+COLA+adjustment" target="_blank" rel="noopener noreferrer">Social Security COLA</a>
+                    <a href="https://www.google.com/search?q=historical+inflation+rates+by+year" target="_blank" rel="noopener noreferrer">Historical Inflation Rates</a>
                 </div>
             </section>
         </div>
