--- a/calculators/investment-return.html
+++ b/calculators/investment-return.html
@@ -379,10 +379,10 @@
                 </h3>
                 <p>Learn more about investing:</p>
                 <div class="policy-grid">
-                    <a href="https://www.google.com/search?q=S%26P+500+historical+returns" target="_blank" rel="noopener">S&P 500 Returns</a>
-                    <a href="https://www.google.com/search?q=best+index+funds" target="_blank" rel="noopener">Best Index Funds</a>
-                    <a href="https://www.google.com/search?q=capital+gains+tax+rates" target="_blank" rel="noopener">Capital Gains Tax</a>
-                    <a href="https://www.google.com/search?q=diversification+investment+strategy" target="_blank" rel="noopener">Diversification Strategy</a>
+                    <a href="https://www.google.com/search?q=S%26P+500+historical+returns" target="_blank" rel="noopener noreferrer">S&P 500 Returns</a>
+                    <a href="https://www.google.com/search?q=best+index+funds" target="_blank" rel="noopener noreferrer">Best Index Funds</a>
+                    <a href="https://www.google.com/search?q=capital+gains+tax+rates" target="_blank" rel="noopener noreferrer">Capital Gains Tax</a>
+                    <a href="https://www.google.com/search?q=diversification+investment+strategy" target="_blank" rel="noopener noreferrer">Diversification Strategy</a>
                 </div>
             </section>
         </div>
