--- a/calculators/loan-payoff.html
+++ b/calculators/loan-payoff.html
@@ -459,12 +459,12 @@
                 </h3>
                 <p>Learn more about debt payoff strategies and tools:</p>
                 <div class="policy-grid">
-                    <a href="https://www.google.com/search?q=debt+payoff+strategies" target="_blank" rel="noopener">Payoff Strategies</a>
-                    <a href="https://www.google.com/search?q=loan+refinancing+options" target="_blank" rel="noopener">Refinancing Options</a>
-                    <a href="https://www.google.com/search?q=debt+consolidation+pros+cons" target="_blank" rel="noopener">Debt Consolidation</a>
-                    <a href="https://www.google.com/search?q=prepayment+penalty+check" target="_blank" rel="noopener">Prepayment Penalties</a>
-                    <a href="https://www.google.com/search?q=credit+score+impact+paying+off+debt" target="_blank" rel="noopener">Credit Score Impact</a>
-                    <a href="https://www.google.com/search?q=biweekly+payment+calculator" target="_blank" rel="noopener">Bi-Weekly Payments</a>
+                    <a href="https://www.google.com/search?q=debt+payoff+strategies" target="_blank" rel="noopener noreferrer">Payoff Strategies</a>
+                    <a href="https://www.google.com/search?q=loan+refinancing+options" target="_blank" rel="noopener noreferrer">Refinancing Options</a>
+                    <a href="https://www.google.com/search?q=debt+consolidation+pros+cons" target="_blank" rel="noopener noreferrer">Debt Consolidation</a>
+                    <a href="https://www.google.com/search?q=prepayment+penalty+check" target="_blank" rel="noopener noreferrer">Prepayment Penalties</a>
+                    <a href="https://www.google.com/search?q=credit+score+impact+paying+off+debt" target="_blank" rel="noopener noreferrer">Credit Score Impact</a>
+                    <a href="https://www.google.com/search?q=biweekly+payment+calculator" target="_blank" rel="noopener noreferrer">Bi-Weekly Payments</a>
                 </div>
             </section>
         </div>
