--- a/calculators/mortgage.html
+++ b/calculators/mortgage.html
@@ -499,12 +499,12 @@
                 </h3>
                 <p>Explore government programs and local policies that may help you save on your mortgage:</p>
                 <div class="policy-grid">
-                    <a href="https://www.google.com/search?q=FHA+loan+requirements+2026" target="_blank" rel="noopener">FHA Loans</a>
-                    <a href="https://www.google.com/search?q=VA+home+loan+benefits+eligibility" target="_blank" rel="noopener">VA Loans</a>
-                    <a href="https://www.google.com/search?q=first+time+home+buyer+programs+2026" target="_blank" rel="noopener">First-Time Buyer</a>
-                    <a href="https://www.google.com/search?q=USDA+rural+home+loan+eligibility" target="_blank" rel="noopener">USDA Loans</a>
-                    <a href="https://www.google.com/search?q=mortgage+interest+tax+deduction+rules" target="_blank" rel="noopener">Tax Deduction</a>
-                    <a href="https://www.google.com/search?q=down+payment+assistance+programs+by+state" target="_blank" rel="noopener">Down Payment Help</a>
+                    <a href="https://www.google.com/search?q=FHA+loan+requirements+2026" target="_blank" rel="noopener noreferrer">FHA Loans</a>
+                    <a href="https://www.google.com/search?q=VA+home+loan+benefits+eligibility" target="_blank" rel="noopener noreferrer">VA Loans</a>
+                    <a href="https://www.google.com/search?q=first+time+home+buyer+programs+2026" target="_blank" rel="noopener noreferrer">First-Time Buyer</a>
+                    <a href="https://www.google.com/search?q=USDA+rural+home+loan+eligibility" target="_blank" rel="noopener noreferrer">USDA Loans</a>
+                    <a href="https://www.google.com/search?q=mortgage+interest+tax+deduction+rules" target="_blank" rel="noopener noreferrer">Tax Deduction</a>
+                    <a href="https://www.google.com/search?q=down+payment+assistance+programs+by+state" target="_blank" rel="noopener noreferrer">Down Payment Help</a>
                 </div>
             </section>
         </div>
