--- a/calculators/refinance.html
+++ b/calculators/refinance.html
@@ -466,10 +466,10 @@
                 </h3>
                 <p>Learn more about refinancing options:</p>
                 <div class="policy-grid">
-                    <a href="https://www.google.com/search?q=current+mortgage+refinance+rates" target="_blank" rel="noopener">Current Rates</a>
-                    <a href="https://www.google.com/search?q=cash+out+refinance+rules" target="_blank" rel="noopener">Cash-Out Refinance</a>
-                    <a href="https://www.google.com/search?q=FHA+streamline+refinance" target="_blank" rel="noopener">FHA Streamline</a>
-                    <a href="https://www.google.com/search?q=VA+IRRRL+refinance" target="_blank" rel="noopener">VA IRRRL</a>
+                    <a href="https://www.google.com/search?q=current+mortgage+refinance+rates" target="_blank" rel="noopener noreferrer">Current Rates</a>
+                    <a href="https://www.google.com/search?q=cash+out+refinance+rules" target="_blank" rel="noopener noreferrer">Cash-Out Refinance</a>
+                    <a href="https://www.google.com/search?q=FHA+streamline+refinance" target="_blank" rel="noopener noreferrer">FHA Streamline</a>
+                    <a href="https://www.google.com/search?q=VA+IRRRL+refinance" target="_blank" rel="noopener noreferrer">VA IRRRL</a>
                 </div>
             </section>
         </div>
