--- a/calculators/rent-vs-buy.html
+++ b/calculators/rent-vs-buy.html
@@ -503,10 +503,10 @@
                 </h3>
                 <p>Explore programs and resources for housing decisions:</p>
                 <div class="policy-grid">
-                    <a href="https://www.google.com/search?q=first+time+home+buyer+programs" target="_blank" rel="noopener">First-Time Buyer</a>
-                    <a href="https://www.google.com/search?q=rent+control+laws+by+state" target="_blank" rel="noopener">Rent Control Laws</a>
-                    <a href="https://www.google.com/search?q=property+tax+rates+by+state" target="_blank" rel="noopener">Property Tax Rates</a>
-                    <a href="https://www.google.com/search?q=housing+market+forecast" target="_blank" rel="noopener">Market Forecast</a>
+                    <a href="https://www.google.com/search?q=first+time+home+buyer+programs" target="_blank" rel="noopener noreferrer">First-Time Buyer</a>
+                    <a href="https://www.google.com/search?q=rent+control+laws+by+state" target="_blank" rel="noopener noreferrer">Rent Control Laws</a>
+                    <a href="https://www.google.com/search?q=property+tax+rates+by+state" target="_blank" rel="noopener noreferrer">Property Tax Rates</a>
+                    <a href="https://www.google.com/search?q=housing+market+forecast" target="_blank" rel="noopener noreferrer">Market Forecast</a>
                 </div>
             </section>
         </div>
