--- a/calculators/retirement.html
+++ b/calculators/retirement.html
@@ -406,10 +406,10 @@
                 </h3>
                 <p>Learn more about retirement planning:</p>
                 <div class="policy-grid">
-                    <a href="https://www.google.com/search?q=retirement+planning+guide+2026" target="_blank" rel="noopener">Retirement Planning Guide</a>
-                    <a href="https://www.google.com/search?q=social+security+benefits+calculator" target="_blank" rel="noopener">Social Security Benefits</a>
-                    <a href="https://www.google.com/search?q=IRA+contribution+limits+2026" target="_blank" rel="noopener">IRA Contribution Limits</a>
-                    <a href="https://www.google.com/search?q=retirement+withdrawal+strategies" target="_blank" rel="noopener">Withdrawal Strategies</a>
+                    <a href="https://www.google.com/search?q=retirement+planning+guide+2026" target="_blank" rel="noopener noreferrer">Retirement Planning Guide</a>
+                    <a href="https://www.google.com/search?q=social+security+benefits+calculator" target="_blank" rel="noopener noreferrer">Social Security Benefits</a>
+                    <a href="https://www.google.com/search?q=IRA+contribution+limits+2026" target="_blank" rel="noopener noreferrer">IRA Contribution Limits</a>
+                    <a href="https://www.google.com/search?q=retirement+withdrawal+strategies" target="_blank" rel="noopener noreferrer">Withdrawal Strategies</a>
                 </div>
             </section>
         </div>
