--- a/calculators/roth-vs-traditional.html
+++ b/calculators/roth-vs-traditional.html
@@ -471,10 +471,10 @@
                 </h3>
                 <p>Research retirement account rules:</p>
                 <div class="policy-grid">
-                    <a href="https://www.google.com/search?q=IRS+Roth+IRA+contribution+limits" target="_blank" rel="noopener">Roth IRA Limits</a>
-                    <a href="https://www.google.com/search?q=IRS+traditional+IRA+deduction+rules" target="_blank" rel="noopener">Traditional IRA Rules</a>
-                    <a href="https://www.google.com/search?q=401k+contribution+limits" target="_blank" rel="noopener">401(k) Limits</a>
-                    <a href="https://www.google.com/search?q=backdoor+Roth+IRA+strategy" target="_blank" rel="noopener">Backdoor Roth Strategy</a>
+                    <a href="https://www.google.com/search?q=IRS+Roth+IRA+contribution+limits" target="_blank" rel="noopener noreferrer">Roth IRA Limits</a>
+                    <a href="https://www.google.com/search?q=IRS+traditional+IRA+deduction+rules" target="_blank" rel="noopener noreferrer">Traditional IRA Rules</a>
+                    <a href="https://www.google.com/search?q=401k+contribution+limits" target="_blank" rel="noopener noreferrer">401(k) Limits</a>
+                    <a href="https://www.google.com/search?q=backdoor+Roth+IRA+strategy" target="_blank" rel="noopener noreferrer">Backdoor Roth Strategy</a>
                 </div>
             </section>
         </div>
