--- a/calculators/salary.html
+++ b/calculators/salary.html
@@ -443,12 +443,12 @@
                 </h3>
                 <p>Learn about minimum wage laws and employment rights:</p>
                 <div class="policy-grid">
-                    <a href="https://www.google.com/search?q=federal+minimum+wage" target="_blank" rel="noopener">Federal Minimum Wage</a>
-                    <a href="https://www.google.com/search?q=minimum+wage+by+state" target="_blank" rel="noopener">State Minimum Wages</a>
-                    <a href="https://www.google.com/search?q=overtime+pay+laws+FLSA" target="_blank" rel="noopener">Overtime Pay Laws</a>
-                    <a href="https://www.google.com/search?q=salary+vs+hourly+exempt+non+exempt" target="_blank" rel="noopener">Exempt vs Non-Exempt</a>
-                    <a href="https://www.google.com/search?q=average+salary+by+profession" target="_blank" rel="noopener">Average Salaries by Job</a>
-                    <a href="https://www.google.com/search?q=cost+of+living+calculator+by+city" target="_blank" rel="noopener">Cost of Living by City</a>
+                    <a href="https://www.google.com/search?q=federal+minimum+wage" target="_blank" rel="noopener noreferrer">Federal Minimum Wage</a>
+                    <a href="https://www.google.com/search?q=minimum+wage+by+state" target="_blank" rel="noopener noreferrer">State Minimum Wages</a>
+                    <a href="https://www.google.com/search?q=overtime+pay+laws+FLSA" target="_blank" rel="noopener noreferrer">Overtime Pay Laws</a>
+                    <a href="https://www.google.com/search?q=salary+vs+hourly+exempt+non+exempt" target="_blank" rel="noopener noreferrer">Exempt vs Non-Exempt</a>
+                    <a href="https://www.google.com/search?q=average+salary+by+profession" target="_blank" rel="noopener noreferrer">Average Salaries by Job</a>
+                    <a href="https://www.google.com/search?q=cost+of+living+calculator+by+city" target="_blank" rel="noopener noreferrer">Cost of Living by City</a>
                 </div>
             </section>
         </div>
