--- a/calculators/savings-goal.html
+++ b/calculators/savings-goal.html
@@ -431,10 +431,10 @@
                 </h3>
                 <p>Find the best places to grow your savings:</p>
                 <div class="policy-grid">
-                    <a href="https://www.google.com/search?q=best+high+yield+savings+accounts" target="_blank" rel="noopener">Best High-Yield Savings</a>
-                    <a href="https://www.google.com/search?q=CD+rates+comparison" target="_blank" rel="noopener">Best CD Rates</a>
-                    <a href="https://www.google.com/search?q=money+market+accounts+best+rates" target="_blank" rel="noopener">Money Market Accounts</a>
-                    <a href="https://www.google.com/search?q=FDIC+insurance+limits" target="_blank" rel="noopener">FDIC Insurance Limits</a>
+                    <a href="https://www.google.com/search?q=best+high+yield+savings+accounts" target="_blank" rel="noopener noreferrer">Best High-Yield Savings</a>
+                    <a href="https://www.google.com/search?q=CD+rates+comparison" target="_blank" rel="noopener noreferrer">Best CD Rates</a>
+                    <a href="https://www.google.com/search?q=money+market+accounts+best+rates" target="_blank" rel="noopener noreferrer">Money Market Accounts</a>
+                    <a href="https://www.google.com/search?q=FDIC+insurance+limits" target="_blank" rel="noopener noreferrer">FDIC Insurance Limits</a>
                 </div>
             </section>
         </div>
