--- a/calculators/self-employment-tax.html
+++ b/calculators/self-employment-tax.html
@@ -522,12 +522,12 @@
                 </h3>
                 <p>Official self-employment tax information:</p>
                 <div class="policy-grid">
-                    <a href="https://www.google.com/search?q=IRS+self-employment+tax+form+SE" target="_blank" rel="noopener">Schedule SE Form</a>
-                    <a href="https://www.google.com/search?q=IRS+estimated+tax+payments+1040-ES" target="_blank" rel="noopener">Form 1040-ES</a>
-                    <a href="https://www.google.com/search?q=SEP+IRA+contribution+limits" target="_blank" rel="noopener">SEP-IRA Limits</a>
-                    <a href="https://www.google.com/search?q=self-employed+health+insurance+deduction" target="_blank" rel="noopener">Health Insurance Deduction</a>
-                    <a href="https://www.google.com/search?q=IRS+quarterly+estimated+tax+penalty" target="_blank" rel="noopener">Quarterly Tax Penalties</a>
-                    <a href="https://www.google.com/search?q=solo+401k+contribution+limits" target="_blank" rel="noopener">Solo 401(k) Limits</a>
+                    <a href="https://www.google.com/search?q=IRS+self-employment+tax+form+SE" target="_blank" rel="noopener noreferrer">Schedule SE Form</a>
+                    <a href="https://www.google.com/search?q=IRS+estimated+tax+payments+1040-ES" target="_blank" rel="noopener noreferrer">Form 1040-ES</a>
+                    <a href="https://www.google.com/search?q=SEP+IRA+contribution+limits" target="_blank" rel="noopener noreferrer">SEP-IRA Limits</a>
+                    <a href="https://www.google.com/search?q=self-employed+health+insurance+deduction" target="_blank" rel="noopener noreferrer">Health Insurance Deduction</a>
+                    <a href="https://www.google.com/search?q=IRS+quarterly+estimated+tax+penalty" target="_blank" rel="noopener noreferrer">Quarterly Tax Penalties</a>
+                    <a href="https://www.google.com/search?q=solo+401k+contribution+limits" target="_blank" rel="noopener noreferrer">Solo 401(k) Limits</a>
                 </div>
             </section>
         </div>
