--- a/calculators/social-security.html
+++ b/calculators/social-security.html
@@ -469,12 +469,12 @@
                 </h3>
                 <p>Get accurate information from official sources:</p>
                 <div class="policy-grid">
-                    <a href="https://www.google.com/search?q=SSA+my+social+security+account" target="_blank" rel="noopener">My Social Security Account</a>
-                    <a href="https://www.google.com/search?q=social+security+retirement+benefits+eligibility" target="_blank" rel="noopener">Eligibility Requirements</a>
-                    <a href="https://www.google.com/search?q=social+security+spousal+benefits" target="_blank" rel="noopener">Spousal Benefits</a>
-                    <a href="https://www.google.com/search?q=social+security+survivor+benefits" target="_blank" rel="noopener">Survivor Benefits</a>
-                    <a href="https://www.google.com/search?q=social+security+COLA" target="_blank" rel="noopener">COLA Adjustments</a>
-                    <a href="https://www.google.com/search?q=social+security+earnings+test+limits" target="_blank" rel="noopener">Earnings Test Limits</a>
+                    <a href="https://www.google.com/search?q=SSA+my+social+security+account" target="_blank" rel="noopener noreferrer">My Social Security Account</a>
+                    <a href="https://www.google.com/search?q=social+security+retirement+benefits+eligibility" target="_blank" rel="noopener noreferrer">Eligibility Requirements</a>
+                    <a href="https://www.google.com/search?q=social+security+spousal+benefits" target="_blank" rel="noopener noreferrer">Spousal Benefits</a>
+                    <a href="https://www.google.com/search?q=social+security+survivor+benefits" target="_blank" rel="noopener noreferrer">Survivor Benefits</a>
+                    <a href="https://www.google.com/search?q=social+security+COLA" target="_blank" rel="noopener noreferrer">COLA Adjustments</a>
+                    <a href="https://www.google.com/search?q=social+security+earnings+test+limits" target="_blank" rel="noopener noreferrer">Earnings Test Limits</a>
                 </div>
             </section>
         </div>
