--- a/calculators/student-loan.html
+++ b/calculators/student-loan.html
@@ -468,12 +468,12 @@
                 </h3>
                 <p>Learn more about student loan programs and options:</p>
                 <div class="policy-grid">
-                    <a href="https://www.google.com/search?q=PSLF+public+service+loan+forgiveness+requirements" target="_blank" rel="noopener">PSLF Forgiveness</a>
-                    <a href="https://www.google.com/search?q=income+driven+repayment+plans+IDR" target="_blank" rel="noopener">Income-Driven Plans</a>
-                    <a href="https://www.google.com/search?q=student+loan+interest+deduction+tax" target="_blank" rel="noopener">Interest Tax Deduction</a>
-                    <a href="https://www.google.com/search?q=student+loan+refinance+rates" target="_blank" rel="noopener">Refinance Rates</a>
-                    <a href="https://www.google.com/search?q=income+driven+repayment+plan+details" target="_blank" rel="noopener">IDR Plan Details</a>
-                    <a href="https://www.google.com/search?q=federal+student+loan+deferment+forbearance" target="_blank" rel="noopener">Deferment Options</a>
+                    <a href="https://www.google.com/search?q=PSLF+public+service+loan+forgiveness+requirements" target="_blank" rel="noopener noreferrer">PSLF Forgiveness</a>
+                    <a href="https://www.google.com/search?q=income+driven+repayment+plans+IDR" target="_blank" rel="noopener noreferrer">Income-Driven Plans</a>
+                    <a href="https://www.google.com/search?q=student+loan+interest+deduction+tax" target="_blank" rel="noopener noreferrer">Interest Tax Deduction</a>
+                    <a href="https://www.google.com/search?q=student+loan+refinance+rates" target="_blank" rel="noopener noreferrer">Refinance Rates</a>
+                    <a href="https://www.google.com/search?q=income+driven+repayment+plan+details" target="_blank" rel="noopener noreferrer">IDR Plan Details</a>
+                    <a href="https://www.google.com/search?q=federal+student+loan+deferment+forbearance" target="_blank" rel="noopener noreferrer">Deferment Options</a>
                 </div>
             </section>
         </div>
