--- a/calculators/take-home-pay.html
+++ b/calculators/take-home-pay.html
@@ -502,10 +502,10 @@
                 </h3>
                 <p>Learn more about payroll taxes:</p>
                 <div class="policy-grid">
-                    <a href="https://www.google.com/search?q=IRS+W-4+form+guide" target="_blank" rel="noopener">W-4 Form Guide</a>
-                    <a href="https://www.google.com/search?q=federal+income+tax+brackets" target="_blank" rel="noopener">Federal Tax Brackets</a>
-                    <a href="https://www.google.com/search?q=state+income+tax+rates+by+state" target="_blank" rel="noopener">State Tax Rates</a>
-                    <a href="https://www.google.com/search?q=FICA+taxes+explained" target="_blank" rel="noopener">FICA Taxes Explained</a>
+                    <a href="https://www.google.com/search?q=IRS+W-4+form+guide" target="_blank" rel="noopener noreferrer">W-4 Form Guide</a>
+                    <a href="https://www.google.com/search?q=federal+income+tax+brackets" target="_blank" rel="noopener noreferrer">Federal Tax Brackets</a>
+                    <a href="https://www.google.com/search?q=state+income+tax+rates+by+state" target="_blank" rel="noopener noreferrer">State Tax Rates</a>
+                    <a href="https://www.google.com/search?q=FICA+taxes+explained" target="_blank" rel="noopener noreferrer">FICA Taxes Explained</a>
                 </div>
             </section>
         </div>
