--- a/privacy.html
+++ b/privacy.html
@@ -63,17 +63,17 @@
                 <p data-i18n="legal.privacy.cookies.essential.content">We use essential cookies to ensure our website functions properly.</p>
 
                 <h3 data-i18n="legal.privacy.cookies.analytics.title">Analytics Cookies</h3>
-                <p data-i18n="legal.privacy.cookies.analytics.content">We use Google Analytics to understand how visitors interact with our website. Google Analytics uses cookies to collect anonymous information about your visits. You can opt out of Google Analytics by installing the <a href="https://tools.google.com/dlpage/gaoptout" target="_blank" rel="noopener">Google Analytics Opt-out Browser Add-on</a>.</p>
+                <p data-i18n="legal.privacy.cookies.analytics.content">We use Google Analytics to understand how visitors interact with our website. Google Analytics uses cookies to collect anonymous information about your visits. You can opt out of Google Analytics by installing the <a href="https://tools.google.com/dlpage/gaoptout" target="_blank" rel="noopener noreferrer">Google Analytics Opt-out Browser Add-on</a>.</p>
 
                 <h3 data-i18n="legal.privacy.cookies.advertising.title">Advertising Cookies</h3>
-                <p data-i18n="legal.privacy.cookies.advertising.content">We use Google AdSense to display advertisements. Google and its partners may use cookies to serve ads based on your prior visits to our website or other websites. You can opt out of personalized advertising by visiting <a href="https://www.google.com/settings/ads" target="_blank" rel="noopener">Google Ads Settings</a>.</p>
+                <p data-i18n="legal.privacy.cookies.advertising.content">We use Google AdSense to display advertisements. Google and its partners may use cookies to serve ads based on your prior visits to our website or other websites. You can opt out of personalized advertising by visiting <a href="https://www.google.com/settings/ads" target="_blank" rel="noopener noreferrer">Google Ads Settings</a>.</p>
 
                 <h2 data-i18n="legal.privacy.thirdParty.title">Third-Party Services</h2>
                 <p data-i18n="legal.privacy.thirdParty.content">Our website uses the following third-party services:</p>
                 <ul>
-                    <li data-i18n="legal.privacy.thirdParty.analytics">Google Analytics: For website analytics (<a href="https://policies.google.com/privacy" target="_blank" rel="noopener">Privacy Policy</a>)</li>
-                    <li data-i18n="legal.privacy.thirdParty.adsense">Google AdSense: For displaying advertisements (<a href="https://policies.google.com/technologies/ads" target="_blank" rel="noopener">Privacy Policy</a>)</li>
-                    <li data-i18n="legal.privacy.thirdParty.fonts">Google Fonts: For typography (<a href="https://developers.google.com/fonts/faq/privacy" target="_blank" rel="noopener">Privacy Policy</a>)</li>
+                    <li data-i18n="legal.privacy.thirdParty.analytics">Google Analytics: For website analytics (<a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">Privacy Policy</a>)</li>
+                    <li data-i18n="legal.privacy.thirdParty.adsense">Google AdSense: For displaying advertisements (<a href="https://policies.google.com/technologies/ads" target="_blank" rel="noopener noreferrer">Privacy Policy</a>)</li>
+                    <li data-i18n="legal.privacy.thirdParty.fonts">Google Fonts: For typography (<a href="https://developers.google.com/fonts/faq/privacy" target="_blank" rel="noopener noreferrer">Privacy Policy</a>)</li>
                 </ul>
 
                 <h2 data-i18n="legal.privacy.dataSecurity.title">Data Security</h2>
