Elevate legal page layout

--- a/privacy.html
+++ b/privacy.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
 
-    <main class="calc-page">
+    <main class="calc-page legal-page">
         <div class="calc-container">
             <h1 data-i18n="legal.privacy.title">Privacy Policy</h1>
             <p data-i18n="legal.privacy.lastUpdated">Last updated: January 2025</p>
