--- a/terms.html
+++ b/terms.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
 
-    <main class="calc-page">
+    <main class="calc-page legal-page">
         <div class="calc-container">
             <h1 data-i18n="legal.terms.title">Terms of Service</h1>
             <p data-i18n="legal.terms.lastUpdated">Last updated: January 2025</p>
