Fix calculator runtime errors and refresh SEO assets

--- a/calculators/inflation.html
+++ b/calculators/inflation.html
@@ -26,7 +26,7 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <script src="/js/init.js"></script>
+    <script src="/js/init.js?v=20260125-2"></script>
     <script src="/js/seo.js" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -443,6 +443,7 @@
     </footer>
 
     <!-- Theme Manager -->
+    <script src="../js/i18n.js?v=20260125-2"></script>
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
     
@@ -451,11 +452,12 @@
     <!-- Inflation Calculator -->
     <script src="../js/inflation.js"></script>
     <!-- Monetization -->
-    <script src="../js/monetization.js"></script>
+    <script src="../js/monetization.js?v=20260125-2"></script>
     <script src="../js/premium.js"></script>
     <script src="../js/affiliate-links.js"></script>
 </body>
 </html>
+
 
 
 
