--- a/calculators/roth-vs-traditional.html
+++ b/calculators/roth-vs-traditional.html
@@ -25,7 +25,7 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <script src="/js/init.js"></script>
+    <script src="/js/init.js?v=20260125-2"></script>
     <script src="/js/seo.js" defer></script>
 
     <link rel="stylesheet" href="../css/style.css?v=20260125-2">
@@ -496,6 +496,7 @@
     </footer>
 
     <!-- Theme Manager -->
+    <script src="../js/i18n.js?v=20260125-2"></script>
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
     
@@ -504,11 +505,12 @@
     <!-- Roth vs Traditional Calculator -->
     <script src="../js/roth-vs-traditional.js"></script>
     <!-- Monetization -->
-    <script src="../js/monetization.js"></script>
+    <script src="../js/monetization.js?v=20260125-2"></script>
     <script src="../js/premium.js"></script>
     <script src="../js/affiliate-links.js"></script>
 </body>
 </html>
+
 
 
 
