--- a/calculators/401k.html
+++ b/calculators/401k.html
@@ -25,7 +25,7 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <script src="/js/init.js"></script>
+    <script src="/js/init.js?v=20260125-2"></script>
     <script src="/js/seo.js" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -450,6 +450,7 @@
     </footer>
 
     <!-- Theme Manager -->
+    <script src="../js/i18n.js?v=20260125-2"></script>
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
     
@@ -458,11 +459,12 @@
     <!-- 401k Calculator -->
     <script src="../js/401k.js"></script>
     <!-- Monetization -->
-    <script src="../js/monetization.js"></script>
+    <script src="../js/monetization.js?v=20260125-2"></script>
     <script src="../js/premium.js"></script>
     <script src="../js/affiliate-links.js"></script>
 </body>
 </html>
+
 
 
 
