--- a/calculators/retirement.html
+++ b/calculators/retirement.html
@@ -25,7 +25,7 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <script src="/js/init.js"></script>
+    <script src="/js/init.js?v=20260125-2"></script>
     <script src="/js/seo.js" defer></script>
 
     <script type="application/ld+json">
@@ -431,6 +431,7 @@
     </footer>
 
     <!-- Theme Manager -->
+    <script src="../js/i18n.js?v=20260125-2"></script>
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
     
@@ -439,11 +440,12 @@
     <!-- Retirement Calculator -->
     <script src="../js/retirement.js"></script>
     <!-- Monetization -->
-    <script src="../js/monetization.js"></script>
+    <script src="../js/monetization.js?v=20260125-2"></script>
     <script src="../js/premium.js"></script>
     <script src="../js/affiliate-links.js"></script>
 </body>
 </html>
+
 
 
 
