--- a/calculators/self-employment-tax.html
+++ b/calculators/self-employment-tax.html
@@ -26,7 +26,7 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <script src="/js/init.js"></script>
+    <script src="/js/init.js?v=20260125-2"></script>
     <script src="/js/seo.js" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -299,6 +299,17 @@
                             <span class="breakdown-value" id="totalDeductions">$0</span>
                         </div>
                     </div>
+
+                    <table class="calc-table">
+                        <thead>
+                            <tr>
+                                <th>Deduction</th>
+                                <th>Amount</th>
+                            </tr>
+                        </thead>
+                        <tbody id="deductionsBody"></tbody>
+                    </table>
+
                 </div>
 
                 <!-- Quarterly Dates Tab -->
@@ -549,6 +560,7 @@
     </footer>
 
     <!-- Theme Manager -->
+    <script src="../js/i18n.js?v=20260125-2"></script>
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
     
@@ -558,11 +570,12 @@
     <script src="../js/tax-params.js"></script>
     <script src="../js/self-employment-tax.js"></script>
     <!-- Monetization -->
-    <script src="../js/monetization.js"></script>
+    <script src="../js/monetization.js?v=20260125-2"></script>
     <script src="../js/premium.js"></script>
     <script src="../js/affiliate-links.js"></script>
 </body>
 </html>
+
 
 
 
