--- a/calculators/take-home-pay.html
+++ b/calculators/take-home-pay.html
@@ -26,7 +26,7 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <script src="/js/init.js"></script>
+    <script src="/js/init.js?v=20260125-2"></script>
     <script src="/js/seo.js" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -527,6 +527,7 @@
     </footer>
 
     <!-- Theme Manager -->
+    <script src="../js/i18n.js?v=20260125-2"></script>
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
     
@@ -536,11 +537,12 @@
     <script src="../js/tax-params.js"></script>
     <script src="../js/take-home-pay.js"></script>
     <!-- Monetization -->
-    <script src="../js/monetization.js"></script>
+    <script src="../js/monetization.js?v=20260125-2"></script>
     <script src="../js/premium.js"></script>
     <script src="../js/affiliate-links.js"></script>
 </body>
 </html>
+
 
 
 
